tests/parser-test-files/bad-files/define-instance.10.error
error: Invalid attribute for define-instance
  --> test:4:0
   |
 4 |  (repr :enum)
   |  ^^^^^^^^^^^^ define-instance cannot have attributes
 5 |  (define-instance (C :a))
   |                   ------ while parsing define-instance
